k8s/components/apps/workflows/temporal/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: temporal-server
spec:
  selector:
    app: temporal-server
  ports:
    - protocol: TCP
      port: 7233
      targetPort: 7233
