k8s/components/apps/workflows/temporal/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: temporal-ui-svc
spec:
  selector:
    app: temporal-ui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
