k8s/components/apps/workflows/temporal/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: temporal-ui-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  ingressClassName: traefik
  rules:
    - host: "temporal.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: temporal-ui-svc
                port:
                  number: 8080
